@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-06T08:08:40Z",
-  "count_outdated" : 82,
-  "uniques_outdated" : 69,
+  "timestamp" : "2022-10-07T08:08:26Z",
+  "count_outdated" : 83,
+  "uniques_outdated" : 70,
   "count" : 90,
   "uniques" : 77,
   "clones" : [
-    {
-      "timestamp": "2022-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-25T00:00:00Z",
       "count": 1,
