@@ -1,3 +1,11 @@
+2022-10-07T08:08:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203225075
+* notice: last 14d: unq all: 4 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 69 82 / 77 90
+* notice: next accum: outdated-unq outdated-all / unq all: 70 83 / 77 90
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-23] / []
+
 2022-10-06T08:08:40Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195555308
 * notice: last 14d: unq all: 4 8
